# pranaam

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  05_train_hindi.ipynb  CHANGELOG.md  Citation.cff  Makefile  README.md  README.rst  api.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  readthedocs.yml  requirements.txt  requirements_rtd.txt  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: api.doctree  contributing.doctree  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
.github/workflows/: adjacent_repo_recommender.yaml  ci.yml  docs.yml  python-publish.yml  test.yml
_modules/: index.html
_modules/pranaam/: base.html  logging.html  naam.html  pranaam.html  utils.html
_sources/: api.rst.txt  installation.rst.txt  quickstart.rst.txt
docs/: Makefile  api.md  api.rst  conf.py  contributing.md  contributing.rst  examples.md  examples.rst  index.md  index.rst  installation.md  quickstart.md  requirements.txt
docs/examples/: basic_usage.ipynb  csv_processing.ipynb  pandas_integration.ipynb  performance_benchmarks.ipynb
examples/: README.md  basic_usage.py  compatibility_demo.py  csv_processor.py  pandas_integration.py  performance_demo.py
model_training/: 00_prep_lr_rel_jati_classifier_data.ipynb  01_uncompress_data.ipynb  02_clean_data.ipynb  03_transliterate.ipynb  04_train_english.ipynb  05_train_hindi.ipynb
pranaam/: __init__.py  base.py  logging.py  naam.py  pranaam.py  utils.py
pranaam/notebooks/: 00_prep_lr_rel_jati_classifier_data.ipynb  02_clean_data.ipynb  03_transliterate.ipynb  04_train_english.ipynb  05_train_hindi.ipynb
pranaam/tests/: __init__.py  conftest.py  test_010_pred_rel.py  test_base.py  test_cli.py  test_e2e.py  test_integration.py  test_logging.py  test_naam.py  test_utils.py
scripts/: migrate_models.py
source/: conf.py  index.rst
streamlit/: requirements.txt  run_app.py  streamlit_app.py
tests/: __init__.py  test_cli.py  test_e2e.py  test_logging.py  test_naam.py  test_utils.py
