[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "pranaam"
version = "0.2.0"
description = "Predict religion and caste based on name"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
  { name = "Rajashekar Chintalapati", email = "rajshekar.ch@gmail.com" },
  { name = "Aaditya Dar" },
  { name = "Gaurav Sood", email = "gsood07@gmail.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
  "Natural Language :: English",
  "Natural Language :: Hindi"
]
keywords = ["predict", "religion", "name", "hindi", "english", "machine-learning", "deep-learning", "nlp", "name-classification", "tensorflow"]
dependencies = [
  "tensorflow>=2.14.0,<2.16",  # Pin to versions that work with existing models
  "tqdm>=4.64.0",
  "gdown>=4.7.0", 
  "pandas>=1.5.0",
  "numpy>=1.21.0,<2.0.0",
  "setuptools>=65.5.1",
  "wheel>=0.38.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]
streamlit = [
  "streamlit>=1.20.0",
  "scikit-learn>=1.0.0,<2.0.0",
  "nltk>=3.8.0",
  "joblib>=1.0.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "black>=24.0",
    "isort>=5.0",
    "pre-commit>=3.0",
    "pandas-stubs>=2.0.0",
    "types-requests",
    "types-tqdm",
    "build>=1.3.0",
    "twine>=6.2.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/appeler/pranaam"
"Repository" = "https://github.com/appeler/pranaam"
"Bug Tracker" = "https://github.com/appeler/pranaam/issues"

[project.scripts]
predict_religion = "pranaam.predict:main"

[tool.hatch.build]
exclude = [
    "/.github",
    "/.venv",
    "/docs",
    "/tests",
    "/.gitignore",
    "/.pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["pranaam"]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["pranaam/tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (requires model download)",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests with real models"
]
# Coverage options (enabled in CI)
# addopts = "--cov=pranaam --cov-report=html --cov-report=term-missing"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = ["pranaam/notebooks/"]

[[tool.mypy.overrides]]
module = ["tensorflow.*", "gdown.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["pranaam"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["pranaam/notebooks/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["S101"]  # use of assert
"*.ipynb" = ["E402", "E722", "UP031", "B905", "F821", "F811", "W293", "F841"]  # ignore notebook linting issues

[tool.ruff.lint.isort]
known-first-party = ["pranaam"]
