[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pranaam"
version = "0.5.0"
description = "Predict religion and caste based on name"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
  { name = "Rajashekar Chintalapati", email = "rajshekar.ch@gmail.com" },
  { name = "Aaditya Dar" },
  { name = "Gaurav Sood", email = "gsood07@gmail.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
  "Natural Language :: English",
  "Natural Language :: Hindi"
]
keywords = ["predict", "religion", "name", "hindi", "english", "machine-learning", "deep-learning", "nlp", "name-classification", "tensorflow"]
dependencies = [
  "tensorflow>=2.20.0",
  "tf-keras>=2.20.0",
  "tqdm>=4.64.0",
  "pandas>=1.5.0",
  "numpy>=1.21.0",
  "requests>=2.25.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
    "nbsphinx>=0.9",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbconvert>=7.0,<7.14",
]
streamlit = [
  "streamlit>=1.20.0",
  "scikit-learn>=1.0.0,<2.0.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "pandas-stubs>=2.0.0",
    "types-requests",
    "types-tqdm",
    "build>=1.3.0",
    "twine>=6.2.0",
    "deptry>=0.12.0",
    "pydoclint>=0.5.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/appeler/pranaam"
"Repository" = "https://github.com/appeler/pranaam"
"Bug Tracker" = "https://github.com/appeler/pranaam/issues"

[project.scripts]
predict_religion = "pranaam.predict:main"

[tool.uv.build-backend]
module-name = "pranaam"
module-root = ""

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (requires model download)",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests with real models"
]



[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tensorflow.*", "tf_keras.*", "gdown.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["pranaam"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    "model_training/",
    "scripts/",
    "docs/",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["S101"]  # use of assert
"*.ipynb" = ["E402", "E722", "UP031", "B905", "F821", "F811", "W293", "F841"]  # ignore notebook linting issues

[tool.ruff.lint.isort]
known-first-party = ["pranaam"]

[tool.deptry]
ignore_notebooks = true
extend_exclude = [
    "docs/examples/*.ipynb",
    "model_training/*.ipynb",
    "streamlit/requirements.txt",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["sphinx", "furo", "sphinx-copybutton", "myst-parser", "scikit-learn", "nbsphinx", "jupyter", "ipykernel", "nbconvert"]

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
check-return-types = true
check-yield-types = true
skip-checking-raises = false
allow-init-docstring = true
require-return-section-when-returning-nothing = false
exclude = '\.git|\.tox|tests/data|model_training/|scripts/'
